// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTML extension – plugin default sanitize should remove foreignObject tag 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;base target=&quot;_parent&quot; /&gt;&lt;meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;script-src 'none'&quot; /&gt;&lt;/head&gt;&lt;body&gt;&lt;svg&gt;&lt;style&gt;&lt;/style&gt;&lt;/svg&gt;&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
>
</iframe>
`;

exports[`HTML extension – plugin default sanitize should remove script inside template tag 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;base target=&quot;_parent&quot; /&gt;&lt;meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;script-src 'none'&quot; /&gt;&lt;/head&gt;&lt;body&gt;&lt;template id=&quot;template&quot;&gt;&lt;svg&gt;&lt;/svg&gt;&lt;/template&gt;
&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
>
</iframe>
`;

exports[`HTML extension – plugin default sanitize should remove script tag 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;base target=&quot;_parent&quot; /&gt;&lt;meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;script-src 'none'&quot; /&gt;&lt;/head&gt;&lt;body&gt;&lt;svg&gt;&lt;/svg&gt;
&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
>
</iframe>
`;

exports[`HTML extension – plugin should apply sanitize function 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;base target=&quot;_parent&quot;&gt;&lt;meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;script-src 'none'&quot;&gt;&lt;/head&gt;&lt;body&gt;&lt;p&gt;sanitized&lt;/p&gt;
&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
>
</iframe>
`;

exports[`HTML extension – plugin should apply sanitize head and body functions 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;title&gt;sanitized | replace-body&lt;/title&gt;&lt;/head&gt;&lt;body&gt;&lt;p&gt;replace-head&lt;/p&gt;
&lt;p&gt;sanitized&lt;/p&gt;
&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
>
</iframe>
`;

exports[`HTML extension – plugin should generate html token 1`] = `
[
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": <div class="html-div">
  content
</div>,
    "hidden": false,
    "info": "html",
    "level": 0,
    "map": [
      2,
      5,
    ],
    "markup": ":::",
    "meta": null,
    "nesting": 0,
    "tag": "iframe",
    "type": "yfm_html_block",
  },
]
`;

exports[`HTML extension – plugin should render HTML in sandboxed iframe 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;base target=&quot;_parent&quot; /&gt;&lt;meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;script-src 'none'&quot; /&gt;&lt;/head&gt;&lt;body&gt;&lt;div class=&quot;html-div&quot;&gt;content&lt;/div&gt;
&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
        sandbox="allow-popups allow-popups-to-escape-sandbox allow-top-navigation-by-user-activation allow-same-origin"
>
</iframe>
`;

exports[`HTML extension – plugin should render html block 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;base target=&quot;_parent&quot; /&gt;&lt;meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;script-src 'none'&quot; /&gt;&lt;/head&gt;&lt;body&gt;&lt;div class=&quot;html-div&quot;&gt;content&lt;/div&gt;
&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
>
</iframe>
`;

exports[`HTML extension – plugin with special characters should render html block with dash in first line 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;base target=&quot;_parent&quot; /&gt;&lt;meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;script-src 'none'&quot; /&gt;&lt;/head&gt;&lt;body&gt;-
&lt;div class=&quot;html-div&quot;&gt;content with dash in first line&lt;/div&gt;
&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
>
</iframe>
`;

exports[`HTML extension – plugin with special characters should render html block with equals sign in first line 1`] = `
<iframe srcdoc="&lt;!DOCTYPE html&gt;&lt;html&gt;&lt;head&gt;&lt;base target=&quot;_parent&quot; /&gt;&lt;meta http-equiv=&quot;Content-Security-Policy&quot; content=&quot;script-src 'none'&quot; /&gt;&lt;/head&gt;&lt;body&gt;=
&lt;div class=&quot;html-div&quot;&gt;content with equals sign in first line&lt;/div&gt;
&lt;/body&gt;&lt;/html&gt;"
        frameborder="0"
        style="width:100%"
        data-yfm-sandbox-mode="srcdoc"
>
</iframe>
`;
